atualizei o projeto-android

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://youtube.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/filipetartaglia" target="_blank">Filipe Tartaglia</a> para o <a href="https://github.com/filipetartaglia/projeto-android" target="_blank">projeto-android</a></p>
     </footer>
 </body>
 </html>
